--- a/index.html
+++ b/index.html
@@ -5,8 +5,12 @@
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <meta http-equiv="X-UA-Compatible" content="ie=edge">
       <title>Home</title>
+      <script src="./three.r92.min.js"></script>
+      <script src="./vanta.net.min.js"></script>
   </head>
   <body>
-      <div id="root"></div>
+      <div id="root">
+
+    </div>
   </body>
 </html>
