--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
       <meta charset="UTF-8">
       <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no width=device-width">
       <meta http-equiv="X-UA-Compatible" content="ie=edge">
-      <title>Home</title>
+      <title></title>
       <script src="./three.r92.min.js"></script>
       <script src="./vanta.net.min.js"></script>
   </head>
