--- a/index.html
+++ b/index.html
@@ -5,12 +5,10 @@
       <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no width=device-width">
       <meta http-equiv="X-UA-Compatible" content="ie=edge">
       <title></title>
-      <script src="./three.r92.min.js"></script>
-      <script src="./vanta.net.min.js"></script>
   </head>
   <body>
-      <div id="root">
-
-    </div>
+   
+    <div id="root"></div>
+    <script src="./noise.min.js" ></script>
   </body>
 </html>
